--- a/src/template.html
+++ b/src/template.html
@@ -6,7 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Webpack config</title>
 </head>
-<body>
-    
+<body class="body">
+    <h1>Hi</h1>
+
+    <img src="" alt="">
 </body>
 </html>
