--- a/src/template.html
+++ b/src/template.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webpack config</title>
+    <link rel="stylesheet" href="index.css">
+    <title><%= htmlWebpackPlugin.options.title %></title>
 </head>
 <body class="body">
-    <h1>Hi</h1>
+    <h1>Hi du adfafdddddddfafadddd</h1>
 
     <img src="" alt="">
 </body>
