--- a/src/template.html
+++ b/src/template.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="index.css">
-    <title><%= htmlWebpackPlugin.options.title %></title>
-</head>
-<body class="body">
-    <h1>Hi du adfafdddddddfafadddddddd</h1>
+    <head>
+        <meta charset="UTF-8" />
+        <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <link rel="stylesheet" href="index.css" />
+        <title><%= htmlWebpackPlugin.options.title %></title>
+    </head>
+    <body class="body">
+        <h1>Hi du adfafdddddddfafadddddddd</h1>
 
-    <img src="" alt="">
-</body>
+        <img src="" alt="" />
+    </body>
 </html>
