update - added purgeCSS plugin for webpack

--- a/src/template.html
+++ b/src/template.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="index.css" />
         <title><%= htmlWebpackPlugin.options.title %></title>
     </head>
-    <body class="body">
+    <body class="body fs-900">
         
     </body>
 </html>
